styles.css
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Fira Sans', sans-serif;
  scroll-behavior: smooth;
}

.navbar {
  background: white;
  height: 120px;
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-bottom: solid 2px black;
  z-index: 1000;
  font-weight: bold;
  width: 100%;
}

.navbar__container {
  display: flex;
  justify-content: space-between;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 100%;
  margin: 0 auto;
  padding: 0 50px;
}

.navbar__container #navbar-logo {
  position: fixed;
  z-index: 1000;
  left: 20px;
}

#navbar__logo .logo {
  cursor: pointer;
  max-width: 100%;
  max-height: 100%;
}

.navbar__menu {
  display: flex;
  align-items: center;
  list-style: none;
  max-width: 100%;
}

.navbar__item {
  height: 80px;
}

.navbar__links {
  color: black;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 130px;
  text-decoration: none;
  height: 100%;
  transition: linear 0.125s;
}

.navbar__links:hover {
  font-size: 120%;
  transition: linear 0.125s;
}

.theme__container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-left: 20px;
}

.theme-switch {
  position: relative;
  display: inline-block;
  width: 60px;
  height: 34px;
}

.theme-switch input {
  display: none;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  border-radius: 34px;
  transition: 0.4s;
}

.slider::before {
  content: '';
  position: absolute;
  width: 26px;
  height: 26px;
  left: 4px;
  bottom: 4px;
  background: #fff;
  border-radius: 50%;
  transition: 0.4s;
}

input:checked + .slider {
  background-color: rgba(59, 59, 59, 0.58);
}

input:checked + .slider::before {
  transform: translateX(26px);
}

:root.dark-mode {
  background-color: black;
  color: white;
}

:root.dark-mode .navbar {
  color: white;
  background: black;
  border-bottom: solid 2px white;
}

:root.dark-mode .navbar__links {
  color: white;
}

:root.dark-mode .footer {
  background: black;
  color: white;
  border-top: solid 2px white;
}

:root.dark-mode .music__links {
  filter: invert(100%) sepia(73%) saturate(0%) hue-rotate(263deg)
    brightness(107%) contrast(101%);
}

:root.dark-mode .social__links {
  filter: invert(100%) sepia(73%) saturate(0%) hue-rotate(263deg)
    brightness(107%) contrast(101%);
}

.news__container {
  margin: 60px 60px;
}

.musicvideo__wrapper {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin: 40px 40px;
  align-content: space-around;
}

.musicvideo__container {
  margin: 10px;
}

.music__links {
  display: flex;
  justify-content: space-around;
  align-content: center;
}

.apple__logo {
  width: 110px;
}

.spotify__logo {
  margin-top: 28px;
  width: 60px;
}

.spotify__player {
  display: flex;
  justify-content: center;
  align-content: center;
  margin: 30px;
}

.swiper__container {
  display: grid;
  place-items: center;
  min-height: 60vh;
  margin-top: 40px;
}

.swiper {
  width: 92%;
}

.image__wrapper {
  width: 100%;
  position: relative;
  padding-top: 56.25%;
}

.image__wrapper img {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center top;
}

.about__wrapper {
  display: flex;
  flex-direction: column;
  justify-self: center;
  align-self: center;
  flex-wrap: wrap;
  margin: 50px 150px;
  text-align: center;
  font-size: 120%;
}

ul {
  list-style: none;
}

.about__title {
  padding-bottom: 30px;
}

.tour__section {
  margin-top: 60px;
}

.tourdates__wrapper {
  display: flex;
  justify-content: center;
  align-content: center;
  padding: 40px 50px;
  font-size: 120%;
}

.tourdates__title {
  display: flex;
  justify-content: center;
  align-content: center;
}

.footer {
  background: white;
  height: 120px;
  display: flex;
  align-items: center;
  font-size: 1.2rem;
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  border-top: solid 2px black;
  z-index: 0;
}

.footer__container {
  display: flex;
  height: 80px;
  z-index: 1;
  width: 100%;
  max-width: 100%;
  padding: 0 20px;
  flex-direction: row;
  font-size: 0.7rem;
}

.social__links {
  display: flex;
  align-items: center;
  margin-left: auto;
}

.social__links img {
  width: 30px;
  height: 30px;
  margin: 0 10px;
  display: flex;
}

.credits {
  display: flex;
  justify-items: left;
  align-items: center;
}

:root.dark-mode .highlight {
  border-bottom: 1px solid rgb(59, 59, 59);
  border-width: 0.2rem;
}

.highlight {
  border-bottom: 1px solid rgba(59, 59, 59, 0.58);
  border-width: 0.2rem;
}

#news {
  display: block;
  margin-top: -100px;
  padding-top: 100px;
}

#music {
  display: block;
  margin-top: -100px;
  padding-top: 100px;
}

#about {
  display: block;
  margin-top: -100px;
  padding-top: 100px;
}

#tour {
  display: block;
  margin-top: -100px;
  padding-top: 100px;
}

.credits p a {
  color: rgba(110, 110, 110, 0.793);
}

.store__link {
  background-color: rgba(59, 59, 59, 0.58);
  border-radius: 4px;
  cursor: pointer;
  color: white;
  text-decoration: none;
  padding: 10px 25px;
  margin-left: 20px;
  font-size: 100%;
  border: none;
  font-weight: 500;
}

.store__link a {
  color: white;
  text-decoration: none;
}

.store__link:hover {
  transition: linear 0.125s;
  background-color: rgb(86, 86, 86);
}

.store__link:focus {
  transition: linear 0.125s;
  background-color: rgb(100, 100, 100);
}

@media screen and (max-width: 960px) {
  .navbar__container {
    display: flex;
    justify-content: space-between;

    z-index: 10;
    max-width: 100%;
    padding: 0;
    margin: 0;
  }

  .navbar__menu {
    display: grid;
    grid-template-columns: 1fr;
    margin: 0;
    max-width: 100%;
    width: 100%;
    position: absolute;
    top: -1000px;
    z-index: -1;
    transition: all 1s;
  }

  .navbar__menu.mobile-view {
    background: white;
    top: 100%;
    transition: top 1s;
    height: 70vh;
    font-size: 1.1rem;
    width: 100%;
    border-bottom: solid 2px black;
  }

  .navbar__menu.mobile-view a {
    border-bottom: solid black 0.5px;
    width: 60%;
    padding: 20px;
  }

  .navbar__menu.mobile-view a:hover {
    font-size: 100%;
    transition: none;
  }

  .navbar__menu.mobile-view a:focus {
    background-color: rgb(115, 115, 115);
  }

  .navbar.navbar-mobile {
    border-bottom: none;
  }

  :root.dark-mode .navbar__menu.mobile-view {
    background: black;
    border-bottom: solid 2px white;
  }

  :root.dark-mode .navbar__menu.mobile-view a {
    border-bottom: solid white 0.5px;
  }

  #navbar__logo .logo {
    margin-left: 20px;
    z-index: 1000;
    max-width: 100%;
  }

  .navbar__toggle .bar {
    width: 25px;
    height: 3px;
    margin: 5px auto;
    transition: all 0.3s ease-in-out;
    background: black;
    z-index: 1000;
  }

  :root.dark-mode .navbar__toggle .bar {
    background: white;
  }

  .navbar__item {
    display: flex;
    justify-content: center;
  }

  .navbar__store {
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .navbar__store a {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    border-bottom: none;
  }

  .navbar__links {
    padding: 2rem;
  }

  .navbar__links:hover {
    font-size: 120%;
    transition: linear 0.125s;
  }

  #mobile-menu {
    position: absolute;
    top: 30%;
    right: 7%;
    transform: translate(5%, 20%);
    cursor: pointer;
  }

  .navbar__toggle .bar {
    display: block;
  }

  #mobile-menu.is-active .bar:nth-child(2) {
    opacity: 0;
  }

  #mobile-menu.is-active .bar:nth-child(1) {
    transform: translateY(8px) rotate(45deg);
  }

  #mobile-menu.is-active .bar:nth-child(3) {
    transform: translateY(-8px) rotate(-45deg);
  }

  .tourdates__title {
    padding-top: 30px;
  }

  .swiper__container {
    min-height: 50vh;
  }

  .footer__container {
    padding: 0 5px;
  }

  .social__links img {
    width: 30px;
    height: 30px;
    margin: 0 5px;
  }

  .about__wrapper {
    margin: 30px 100px;
  }
}

@media screen and (max-width: 600px) {
  iframe {
    width: 400px;
    height: 300px;
  }
  .swiper__container {
    min-height: 30vh;
  }

  .about__wrapper {
    margin: 20px 80px;
  }
}

@media screen and (max-width: 430px) {
  iframe {
    width: 300px;
    height: 200px;
  }

  .footer__container {
    font-size: 0.5rem;
  }

  .footer__emblem {
    max-width: 50%;
    max-height: 50%;
    justify-self: center;
    align-self: center;
  }

  .swiper__container {
    min-height: 20vh;
  }

  .about__wrapper {
    margin: 50px 30px;
  }
}

